# AssistantAI

./: .gitignore  main.py  pyproject.toml  tools.py  要件定義.md
testcode/: test.py  test2.py  test4.py  test5.py  test6.py
