[tool.poetry]
name = "assistantAI"
version = "0.1.0"
description = ""
authors = ["Accord33"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.21.2"
pyautogui = "^0.9.54"
langchain-google-genai = "^0.0.11"
langchain = "^0.1.13"
duckduckgo-search = "^5.1.0"
langchain-community = "^0.0.29"
bs4 = "^0.0.2"
keyboard = "^0.13.5"
pynput = "^1.7.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
